fix bad layout of an icon on Safari

--- a/src/components/Account/Account.scss
+++ b/src/components/Account/Account.scss
@@ -287,6 +287,7 @@ a.accountName {
   display: flex;
   .icon {
     width: 20px;
+    height: 20px;
     margin-right: 10px;
   }
 }
